deploy-frontv1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  frontend-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-v1
  template:
    metadata:
      labels:
        app: frontend-v1
    spec:
      containers:
      - name: frontend-v1
        image: ximenaurbieta/frontend:1.0.0.
        ports:
        - containerPort: 3001
