deploy-frontv2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  frontend-v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-v2
  template:
    metadata:
      labels:
        app: frontend-v2
    spec:
      containers:
      - name: frontend-v2
        image: ximenaurbieta/frontend:2.0.0
        ports:
        - containerPort: 3001
