service-backv1.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-v1-service
spec:
  selector:
    app: backend-v1 
  ports:
  - port: 3000
    targetPort: 3000
