service-backv2.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-v2-service
spec:
  selector:
    app: backend-v2 
  ports:
  - port: 3000
    targetPort: 3000
