service-frontv1.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-v1-service
spec:
  selector:
    app: frontend-v1
  ports:
  - port: 8080
    targetPort: 3001
