service-frontv2.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-v2-service
spec:
  selector:
    app: frontend-v2
  ports:
  - port: 8080
    targetPort: 3001
